# fuzzy_minimize

./: .gitignore  CMakeLists.txt  CubeRow.cpp  CubeRow.h  CubeTable.cpp  CubeTable.h  FunctionGenerator.cpp  FunctionGenerator.h  FuzzyFunction.cpp  FuzzyFunction.h  ImplicRow.cpp  ImplicRow.h  ImplicTable.cpp  ImplicTable.h  MinimizeAlgorithms.cpp  MinimizeAlgorithms.h  Minimizer.cpp  Minimizer.h  OperationImpl.h  Parser.cpp  Parser.h  README.md  Reader.cpp  Reader.h  Scan.cpp  Scan.h  Scanner.cpp  Scanner.h  Source.cpp  Source.h  Util.cpp  Util.h  main.cpp
